<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search" />

    <item
        android:id="@+id/menu_add_vehicle"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_add_vehicle" />

    <item
        android:id="@+id/menu_my_ads"
        android:icon="@drawable/ic_my_ads"
        android:title="@string/menu_my_ads" />

    <item
        android:id="@+id/menu_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_favorites" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />

</menu>

