<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_used_cars"
        android:icon="@drawable/ic_directions_car"
        android:title="@string/nav_used_cars" />

    <item
        android:id="@+id/nav_new_cars"
        android:icon="@drawable/ic_car_rental"
        android:title="@string/nav_new_cars" />

    <item
        android:id="@+id/nav_bikes"
        android:icon="@drawable/ic_two_wheeler"
        android:title="@string/nav_bikes" />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_more" />

</menu>

