<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_notifications"
        android:title="Notifications"
        app:showAsAction="always"
        app:actionLayout="@layout/notification_badge_layout" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_toggle_layout"
        android:icon="@drawable/ic_grid"
        android:title="@string/action_toggle_layout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_advanced_search"
        android:title="Advanced Search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_analytics"
        android:title="Analytics Dashboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorites"
        android:title="Favorite Vehicles"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_user_profile"
        android:title="My Profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_comparison"
        android:title="Compare"
        app:showAsAction="never" /></menu>
